custom design yooo

--- a/src/styles/base/fonts.scss
+++ b/src/styles/base/fonts.scss
@@ -21,3 +21,19 @@
   font-style: normal;
   font-display: swap;
 }
+
+@font-face {
+  font-family: 'RuneScape UF';
+  src: url('../../fonts/subset-RuneScape-UF.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'CoFo Rax V0.1';
+  src: url('../../fonts/subset-CoFoRaxV01-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
