--- a/src/styles/components/gray-center-box.scss
+++ b/src/styles/components/gray-center-box.scss
@@ -4,7 +4,8 @@
   text-align: center;
   justify-content: center;
   height: 280px;
-  background: $lightGrayBg;
+  background: $darkTan;
+  border: 2px solid black;
 
   img,
   svg {
