--- a/src/styles/base/variables.scss
+++ b/src/styles/base/variables.scss
@@ -1,5 +1,7 @@
 $font: 'ABC Mono', sans-serif;
 $font2: 'ABC Expanded', sans-serif;
+$font3: 'CoFo Rax V0.1', sans-serif;
+$font4: 'RuneScape UF', sans-serif;
 
 $bg: #120408;
 $black: #120408;
@@ -9,6 +11,10 @@ $lightGrayBg: #f9f9f9;
 $border: #ccc;
 $green: #2bff88;
 $blue: #2e7cf6;
+$tan: #a0a39c;
+$darkTan: #90928c;
+
+$neon: #c8e400;
 
 $footerGray: #948e90;
 
