--- a/src/styles/components/badge.scss
+++ b/src/styles/components/badge.scss
@@ -1,11 +1,13 @@
 .badge {
   text-transform: uppercase;
-  background: $black;
-  color: $green;
+  background: #c8e400;
+  border: 2px solid #e0ff00;
+  box-shadow: 0px 0px 17px rgba(0, 0, 3, 0.05);
+  color: $black;
   font-size: 12px;
   display: inline-flex;
   align-items: center;
-  border-radius: 12px;
+  border-radius: 0px;
   line-height: 24px;
   padding: 0 10px;
 }
