--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -1,7 +1,7 @@
 .footer {
   color: $footerGray;
   text-align: center;
-  padding: 24px 0;
+  padding: 24px 20px;
 
   svg {
     margin: 0 auto;
@@ -11,5 +11,12 @@
     font-size: 12px;
     text-transform: uppercase;
     margin-top: 10px;
+    font-family: $font;
+    color: #c8e400;
+  }
+
+  p.address {
+    color: #989993;
+    word-break: break-all;
   }
 }
