--- a/src/styles/components/loading.scss
+++ b/src/styles/components/loading.scss
@@ -36,7 +36,7 @@
 }
 
 .loading-image-message {
-  background: #f2f2f2;
+  background: $darkTan;
   height: 260px;
   display: flex;
   align-items: center;
@@ -58,7 +58,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(255, 255, 255, 0.8);
+    background: rgba(160, 163, 156, 0.8);
     content: '';
   }
 
