--- a/src/styles/components/wallet-dropdown.scss
+++ b/src/styles/components/wallet-dropdown.scss
@@ -27,7 +27,7 @@
   padding: 0 10px;
   font-size: 12px;
   color: $white;
-  border-radius: 12px;
+  //border-radius: 12px;
   display: inline-flex;
   align-items: center;
 
