--- a/src/styles/pages/register.scss
+++ b/src/styles/pages/register.scss
@@ -39,8 +39,9 @@
   background: $lightGrayBg;
   opacity: 0;
   transition: $fadeOff;
-  border-radius: 15px;
+  //border-radius: 15px;
   overflow: hidden;
+  border: 2px solid black;
 
   &.previewing {
     opacity: 1;
@@ -57,15 +58,15 @@
 
 .register-image-preview-remove {
   position: absolute;
-  top: 5px;
-  right: 5px;
+  top: 10px;
+  right: 10px;
   width: 32px;
   height: 32px;
-  border-radius: 50%;
+  // border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: rgba(4, 3, 3, 0.45);
+  background-color: rgba(4, 3, 3, 1);
   z-index: 2;
   color: $white;
   transition: 0.2s background-color, 0.2s color;
