--- a/src/styles/pages/success.scss
+++ b/src/styles/pages/success.scss
@@ -3,10 +3,36 @@
 
   a {
     text-decoration: none;
-    color: $blue;
+    color: $black;
+    text-decoration: underline;
   }
 
   a:hover {
-    text-decoration: underline;
+    text-decoration: none;
   }
+}
+
+.success-section {
+  border-top: 2px solid black;
+
+  &.flex {
+    display: flex;
+  }
+
+  .padding {
+    padding: 24px;
+  }
+
+  .description {
+    flex: 1;
+  }
+}
+
+.success-section-label {
+  width: 46px;
+  border-right: 2px solid black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 24px 0;
 }
